# ZUMA_SYSTEM

./: .env  .env.development  .env.production  App.tsx  Cargo.toml  README.md  app.js  app.json  cleaned_data_output.txt  detected_text_output.txt  ecosystem.config.js  index.js  main.py  ormconfig.js  package-lock.json  package.json  requirements.txt  test.txt  timing_log.txt  todo.txt  tsconfig.json
Analytics/: api_analytics.ts  api_profiler.js  process_timer.js
CONTROLLER/: controller.js
CORE/: core.js
Constants/: TheoreticalBottleCount.js  Tools_Interface.js  stringRandoGeneration.js
Controllers/: controller.js
DB/: db_init.js  interface.js  queries.js  query_manager.js
Error/: error_handling.js  success_handling.js
Helpers/: activation_engine.js  addProduct.js  editProducts.js  helper_interface.js  product_rule_based_acti_engine.js  reduction_inv.js  shipment_engine.js  transaction_data_gather.js  transaction_engine.js
MiddleWare/: middleware.js
ROUTES/: endpoints.js
Routes/: endpoint_handler.js  endpoints.js
Services/: Services.js
Sockets/: SystemStatusSocket.js
Templates/: Templates.js
Test/: LogHandler.js  activationEngineIntegration_test.js  engine_unit_test.js  test.cjs  testHandler.js  testOutput.txt
Utils/: errorHandling.js  sucessHandling.js
android/: settings.gradle
centralUnit/: package-lock.json  package.json
inventory-visual/: package-lock.json  package.json
ios/: Podfile  RNAirPrinterModule.h  RNAirPrinterModule.m  Test_Native_Module.m  hello.h
slaveUnit/: package.json
src/: main.rs  modal_component.tsx
(+128 files in other folders)
